--- a/notebooks/02 - Feature Engineering.ipynb
+++ b/notebooks/02 - Feature Engineering.ipynb
@@ -826,10 +826,10 @@
     }
    ],
    "source": [
-    "if os.path.isfile(\"../data/processed/raw_data_featurized.csv\"):\n",
+    "if os.path.isfile(\"../data/processed/processed_data_featurized.csv\"):\n",
     "    print('Featurized data already available. Getting it from the disk...')\n",
-    "    raw_data_featurized = pd.read_csv(\"../data/processed/raw_data_featurized.csv\", sep=\",\", encoding='latin-1')\n",
-    "    raw_data_featurized.fillna(\"\")\n",
+    "    processed_data_featurized = pd.read_csv(\"../data/processed/processed_data_featurized.csv\", sep=\",\", encoding='latin-1')\n",
+    "    processed_data_featurized.fillna(\"\")\n",
     "    print('Data loaded!')\n",
     "else:\n",
     "    start = datetime.now()\n",
@@ -1032,7 +1032,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Convert all question1 to vectors"
+    "Convert question1 & question2 to vectors"
    ]
   },
   {
